--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.jakewharton:butterknife:8.5.0'
     compile 'com.jakewharton:butterknife-compiler:8.5.0'
+    compile 'com.android.support:design:25.2.0'
 }
