--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.administrator.pandatvsecond"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.0'
     compile 'com.jakewharton:butterknife-compiler:8.5.0'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.androidkun:pulltorefreshrecyclerview:1.0.6'
+    compile project(':jcvideoplayer-lib')
 }
