--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.example.administrator.pandatvsecond"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.jakewharton:butterknife:8.5.0'
     compile 'com.jakewharton:butterknife-compiler:8.5.0'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.androidkun:pulltorefreshrecyclerview:1.0.6'
+    compile 'com.youth.banner:banner:1.4.9'
 }
