--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".activity.SplashActivity">
+        <activity android:name=".activity.LogoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,13 @@
         <activity android:name=".activity.video.VideoActivity"
             android:screenOrientation="landscape">
         </activity>
-        <activity android:name=".activity.LogoActivity"/>
+        <activity android:name=".activity.SplashActivity"/>
         <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.PersonCenterActivity"/>
+        <activity android:name=".moudle.mine.login.LoginActivity"/>
+ <activity android:name=".activity.RegisterActivity"/>
+        <activity android:name=".activity.PersonAgreeActivity"/>
+        <activity android:name=".moudle.mine.pwd.PassWordActivity"/>
     </application>
 
 </manifest>
