--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
+    greendao{
+        schemaVersion 1
+        daoPackage 'com.jiyun.com.day07_greendao'
+        targetGenDir 'src/main/java'
+    }
     defaultConfig {
         applicationId "com.example.administrator.pandatvsecond"
         minSdkVersion 16
@@ -41,4 +46,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.androidkun:pulltorefreshrecyclerview:1.0.6'
     compile 'com.youth.banner:banner:1.4.9'
+    compile 'org.greenrobot:greendao:3.2.0'
 }
