--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+  >
         <activity android:name=".activity.LogoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +27,15 @@
  <activity android:name=".activity.RegisterActivity"/>
         <activity android:name=".activity.PersonAgreeActivity"/>
         <activity android:name=".moudle.mine.pwd.PassWordActivity"/>
+    <activity android:name=".moudle.mine.collect.ShouCangActivity"/>
+        <activity android:name=".activity.GeRenXinXiActivity"/>
+        <activity android:name=".moudle.mine.history.HistoryActivity"/>
+        <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.PersonhelpActivity"/>
+        <activity android:name=".activity.AboutActivity"/>
+        <activity android:name=".activity.XiuGaiNameActivity"/>
+        <!--<activity android:name=".activity.LoginSuccessActivity"/>-->
+
     </application>
 
 </manifest>
