--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <activity android:name=".activity.SplashActivity"/>
         <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".moudle.pandagg.ggwebactivity.GGWebViewActivity">
+        <activity android:name=".activity.ggwebactivity.GGWebViewActivity">
 
         </activity>
         <activity android:name=".activity.PersonCenterActivity"/>
